<resources>
    <string name="app_name">CPay</string>
    <string name="adverts_title">adverts</string>
    <string name="settings_title">settings</string>
    <string name="profile_title">profile</string>
    <string name="search_title">search</string>
    <string name="location_title">location</string>
    <string name="share_title">location</string>
    <string name="filter_title">filter</string>
    <string name="view_nav_open">Open</string>
    <string name="view_nav_close">Close</string>
    <string name="loading">Loading…</string>
    <string name="advert_tab">Adverts</string>
    <string name="map_tab">Map</string>
    <string name="history_tab">History</string>
    <string name="tab_4">Tab 4</string>
    <string name="btn_buy">BUY</string>
    <string name="btn_order">ORDER</string>
    <string name="cart_title">Cart :</string>
    <string name="menu_in_cart">in cart</string>
    <string name="send_title">send</string>
    <string name="recovery_title">recovery account</string>
    <string name="text_your_balance">Your balance</string>
    <string name="text_comission">Comission 0 eth</string>
    <string name="purse_title">Purse</string>
    <string name="setting_title">Settings</string>
    <string name="templates_menu">templates</string>
    <string name="qrcode_menu">scan qrcode</string>
    <string name="address_title">Address</string>
    <string name="address_recepient_title">Address recepient</string>
    <string name="amount_title">Amount</string>
    <string name="hint_input_address_recepient">input address recepient 0x00..</string>
    <string name="hint_input_amount">input amount coin</string>
    <string name="name_template_title">Name template</string>
    <string name="hint_input_name_template">input name template</string>
    <string name="title_your_address">Your address</string>
    <string name="title_qrcode">Your QR CODE</string>
    <string name="change_title">Change</string>
    <string name="recive_title">Recive</string>
    <string name="danger_address_recepient_isempty">Address recepient is empty!</string>
    <string name="danger_wrong_address_ethereum_wallet">Wrong ethereum address recepient!</string>
    <string name="danger_not_enough_money">Not enough money</string>
    <string name="danger_make_you_order">make your order</string>
    <string name="danger_error_rate_eth">error for rate ethereum</string>
    <string name="empty_list">Empty list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
