<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/purse_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/text_your_balance" />
        <TextView
            android:id="@+id/tv_balance"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="15pt"
            android:textColor="@color/blackColor"
            android:text=""/>
        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_marginTop="100dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/send_title"
            android:background="@color/colorPrimary"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_receive"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/receive_title"
            android:background="@color/colorPrimary"

            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_change"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/change_title"
            android:background="@color/colorPrimary"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>